generacion de mapa, personaje y colisiones

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<html>
-    <head>
-        <body>
-            
-        </body>
-    </head>
-</html>
+<style>
+    body {
+        background-color: black;
+    }
+</style>
+<canvas></canvas>
+<script src="data/collisions.js"></script>
+<script src="index.js"></script>
