sprites del personaje y battlezones

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
         background-color: black;
     }
 </style>
-<canvas></canvas>
+------------------------------4 horas 2:25 min-----------------------------------------------------------------------------
+<div style="display: inline-block;">
+    <div style = "background-color: black; width: 200px;
+    height: 200px; position: absolute;"></div>
+    <canvas></canvas>
+</div>
+<script src="data/battleZones.js"></script>
 <script src="data/collisions.js"></script>
+<script src="classes.js"></script>
 <script src="index.js"></script>
+
