--- a/index.html
+++ b/index.html
@@ -50,10 +50,46 @@
         padding: 12px;"
     >
         <h1 style="font-size: 16px;">Draggle</h2>
-            <!-- -----------------------5 horas 11 segudos--------------------------------- -->
-        <div style="height: 5px; background-color: #ccc; margin-top: 10px;">
+        <div style="position: relative;">
+            <div style="height: 5px; background-color: #ccc; margin-top: 10px;">
+            </div>
+            <div 
+            id = "enemyHealthBar"
+            style = "
+            height: 5px; 
+            background-color: green; 
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;">
+            </div>
+        </div> 
+    </div>
 
-        </div>
+    <div style="
+        background-color: white; 
+        width: 250px;  
+        position: absolute; 
+        top: 330px; 
+        right: 50px; 
+        border: 4px black solid;
+        padding: 12px;"
+    >
+        <h1 style="font-size: 16px;">Emby</h2>
+        <div style="position: relative;">
+            <div style="height: 5px; background-color: #ccc; margin-top: 10px;">
+            </div>
+            <div 
+            id = "playerHealthBar"
+            style="
+            height: 5px; 
+            background-color: green; 
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;">
+            </div>
+        </div> 
     </div>
     <canvas></canvas>
 
@@ -69,10 +105,9 @@
 
     ">
         <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
-            <button>Attack1</button>
-            <button>Attack2</button>
-            <button>Attack3</button>
-            <button>Attack4</button>
+            <button>Tackle</button>
+            <!-- ---------------------------------------5:30:14---------------------------------------------------------- -->
+            <button>Fireball</button>
         </div>
         <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px black solid;">
             <h1 style="font-size: 16px;">Attack type</h1>
