--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
         </div> 
     </div>
     <canvas></canvas>
-
     <div style = "
         background-color: white; 
         height: 140px; 
@@ -104,9 +103,11 @@
         display: flex;
 
     ">
+    <div id = "dialogueBox" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; ; background-color: white; padding: 12px; display: none;">
+asasdasdasdas
+    </div>
         <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
             <button>Tackle</button>
-            <!-- ---------------------------------------5:30:14---------------------------------------------------------- -->
             <button>Fireball</button>
         </div>
         <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px black solid;">
@@ -118,6 +119,7 @@
 <!--<script src="CSS/gsap.min.js"></script>-->
 <script src="data/battleZones.js"></script>
 <script src="data/collisions.js"></script>
+<script src="data/attacks.js"></script>
 <script src="classes.js"></script>
 <script src="index.js"></script>
 </body>
