--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
         left: 0; 
         opacity: 0; 
         pointer-events: none;
+        z-index: 10;
     ">
     </div>
-    <div style="
+    
+    <canvas></canvas>
+
+    <div id = "userInterface">
+        <div style="
         background-color: white; 
         width: 250px;  
         position: absolute; 
@@ -49,50 +54,50 @@
         border: 4px black solid;
         padding: 12px;"
     >
-        <h1 style="font-size: 16px;">Draggle</h2>
-        <div style="position: relative;">
-            <div style="height: 5px; background-color: #ccc; margin-top: 10px;">
-            </div>
-            <div 
-            id = "enemyHealthBar"
-            style = "
-            height: 5px; 
-            background-color: green; 
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;">
-            </div>
-        </div> 
-    </div>
+            <h1 style="font-size: 16px;">Draggle</h2>
+            <div style="position: relative;">
+                <div style="height: 5px; background-color: #ccc; margin-top: 10px;">
+                </div>
+                <div 
+                id = "enemyHealthBar"
+                style = "
+                height: 5px; 
+                background-color: green; 
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;">
+                </div>
+            </div> 
+        </div>
 
-    <div style="
-        background-color: white; 
-        width: 250px;  
-        position: absolute; 
-        top: 330px; 
-        right: 50px; 
-        border: 4px black solid;
-        padding: 12px;"
-    >
-        <h1 style="font-size: 16px;">Emby</h2>
-        <div style="position: relative;">
-            <div style="height: 5px; background-color: #ccc; margin-top: 10px;">
-            </div>
-            <div 
-            id = "playerHealthBar"
-            style="
-            height: 5px; 
-            background-color: green; 
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;">
-            </div>
-        </div> 
-    </div>
-    <canvas></canvas>
-    <div style = "
+        <div style="
+            background-color: white; 
+            width: 250px;  
+            position: absolute; 
+            top: 330px; 
+            right: 50px; 
+            border: 4px black solid;
+            padding: 12px;"
+        >
+            <h1 style="font-size: 16px;">Emby</h2>
+            <div style="position: relative;">
+                <div style="height: 5px; background-color: #ccc; margin-top: 10px;">
+                </div>
+                <div 
+                id = "playerHealthBar"
+                style="
+                height: 5px; 
+                background-color: green; 
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;">
+                </div>
+            </div> 
+        </div>
+
+        <div style = "
         background-color: white; 
         height: 140px; 
         position: absolute;
@@ -101,27 +106,32 @@
         right: 0;
         border-top: 4px black solid;
         display: flex;
+        ">
 
-    ">
-    <div id = "dialogueBox" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; ; background-color: white; padding: 12px; display: none;">
-asasdasdasdas
-    </div>
-        <div style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
-            <button>Tackle</button>
-            <button>Fireball</button>
+        <div id = "dialogueBox" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; ; background-color: white; padding: 12px; display: none; cursor: pointer;">
+
         </div>
-        <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px black solid;">
-            <h1 style="font-size: 16px;">Attack type</h1>
+            <div id = "attacksBox" style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
+            </div>
+            <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px black solid;">
+                <h1 id = "attackType" style="font-size: 16px;">Attack type</h1>
+            </div>
         </div>
     </div>
+
+
+    
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!--<script src="CSS/gsap.min.js"></script>-->
+<script src="data/audio.js"></script>
 <script src="data/battleZones.js"></script>
 <script src="data/collisions.js"></script>
 <script src="data/attacks.js"></script>
+<script src="data/monsters.js"></script>
 <script src="classes.js"></script>
 <script src="index.js"></script>
+<script src="battleScene.js"></script>
 </body>
 
 
