--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 
 <script src="data/howler2.2.3.min.js"></script>
 <script src="CSS/gsap.min.js"></script>
+<script src="data/respuestas.js"></script>
 <script src="data/audio.js"></script>
 <script src="data/battleZones.js"></script>
 <script src="data/collisions.js"></script>
