--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div id = "attacksBox" style="width: 66.66%; display: grid; grid-template-columns: repeat(2, 1fr);">
             </div>
             <div style="display: flex; align-items: center; justify-content: center; width: 33.33%; border-left: 4px black solid;">
-                <h1 id = "attackType" style="font-size: 16px;">Attack type</h1>
+                <h1 id = "attackType" style="font-size: 16px;"></h1>
             </div>
         </div>
     </div>
